fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -132,8 +132,10 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-     width: 85%;
-     height: 40%;
+     padding-left: 10px;
+     margin-left: 10px;
+     width: 90%;
+     height: 50%;
    }
  }
  .fitpage {
